Add kitchen station management, refactor menu explorer, and update UI components