@@ -1,22 +1,22 @@
 package com.restaurant.menu.menu_service.service;
 
 import com.restaurant.common.exception.ResourceNotFoundException;
+import com.restaurant.menu.menu_service.exceptions.MenuItemAlreadyExistsException;
 import com.restaurant.menu.menu_service.dto.MenuItem.CreateMenuItemDtoRequest;
 import com.restaurant.menu.menu_service.dto.MenuItem.MenuItemDto;
 import com.restaurant.menu.menu_service.dto.UpdateMenuItemRequest;
 import com.restaurant.menu.menu_service.entity.Category;
-import com.restaurant.menu.menu_service.entity.Menu;
 import com.restaurant.menu.menu_service.entity.MenuItem;
 import com.restaurant.menu.menu_service.mapper.MenuItemMapper;
 import com.restaurant.menu.menu_service.repository.CategoryRepository;
 import com.restaurant.menu.menu_service.repository.MenuItemRepository;
-import com.restaurant.menu.menu_service.repository.MenuRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -30,12 +30,11 @@ public class MenuItemService {
 
     // ==================== CONSTANTS ====================
     // Error Messages
-    private static final String MENU_NOT_FOUND_MSG = "Menu not found with ID: %s";
     private static final String CATEGORY_NOT_FOUND_MSG = "Category not found with ID: %s";
     private static final String MENU_ITEM_NOT_FOUND_MSG = "Menu item not found with ID: %s";
+    private static final String MENU_ITEM_NAME_EXISTS_MSG = "Menu item with name '%s' already exists";
     
     // ==================== DEPENDENCIES ====================
-    private final MenuRepository menuRepository;
     private final MenuItemRepository menuItemRepository;
     private final CategoryRepository categoryRepository;
     private final MenuItemMapper menuItemMapper;
@@ -47,20 +46,29 @@ public class MenuItemService {
      * Create a new menu item.
      */
     public MenuItemDto createMenuItem(CreateMenuItemDtoRequest request) {
-        Menu menu = menuRepository.findById(request.getMenuId())
-                .orElseThrow(() -> new ResourceNotFoundException(String.format(MENU_NOT_FOUND_MSG, request.getMenuId())));
-
+        
+        // 1. Check if menu item with the same name already exists
+        if (menuItemRepository.existsByNameIgnoreCase(request.getName())) {
+            throw new MenuItemAlreadyExistsException(String.format(MENU_ITEM_NAME_EXISTS_MSG, request.getName()));
+        }
+        
+        // 2. Find the category
         Category category = categoryRepository.findById(request.getCategoryId())
-                    .orElseThrow(() -> new ResourceNotFoundException(String.format(CATEGORY_NOT_FOUND_MSG, request.getCategoryId())));
+                .orElseThrow(() -> new ResourceNotFoundException(String.format(CATEGORY_NOT_FOUND_MSG, request.getCategoryId())));
 
-        MenuItem item = new MenuItem();
-        item.setMenu(menu);
-        item.setCategory(category);
-        item.setName(request.getName());
-        item.setDescription(request.getDescription());
-        item.setPrice(request.getPrice());
+        // 3. Create the menu item entity using Builder pattern
+        MenuItem menuItem = MenuItem.builder()
+                .category(category)
+                .name(request.getName())
+                .description(request.getDescription())
+                .price(request.getPrice())
+                .isAvailable(request.getIsAvailable())
+                .ingredients(request.getIngredients())
+                .build();
 
-        return menuItemMapper.toDto(menuItemRepository.save(item));
+        // 5. Save and return
+        MenuItem savedMenuItem = menuItemRepository.save(menuItem);
+        return menuItemMapper.toDto(savedMenuItem);
     }
 
     // ---------------------------------------------------------------------
@@ -69,9 +77,15 @@ public class MenuItemService {
     /**
      * Update an existing menu item.
      */
-    public MenuItemDto updateMenuItem(Long itemId, UpdateMenuItemRequest request) {
+    public MenuItemDto updateMenuItem(UpdateMenuItemRequest request) {
+        Long itemId = request.getId();
         MenuItem item = menuItemRepository.findById(itemId)
                 .orElseThrow(() -> new ResourceNotFoundException(String.format(MENU_ITEM_NOT_FOUND_MSG, itemId)));
+
+        // Check if another menu item with the same name already exists (excluding current item)
+        if (menuItemRepository.existsByNameIgnoreCaseAndIdNot(request.getName(), itemId)) {
+            throw new MenuItemAlreadyExistsException(String.format(MENU_ITEM_NAME_EXISTS_MSG, request.getName()));
+        }
 
         Category category = null;
         if (request.getCategoryId() != null) {
@@ -82,11 +96,13 @@ public class MenuItemService {
         item.setName(request.getName());
         item.setDescription(request.getDescription());
         item.setPrice(request.getPrice());
-        item.setAvailable(request.isAvailable());
+        item.setIsAvailable(request.getIsAvailable());
         item.setCategory(category);
+        item.setIngredients(request.getIngredients());
         item.setUpdatedAt(LocalDateTime.now());
 
-        return menuItemMapper.toDto(menuItemRepository.save(item));
+        MenuItem savedMenuItem = menuItemRepository.save(item);
+        return menuItemMapper.toDto(savedMenuItem);
     }
 
     // ---------------------------------------------------------------------
@@ -120,20 +136,10 @@ public class MenuItemService {
     /**
      * List items with optional filters.
      */
-    public List<MenuItemDto> getMenuItems(Long categoryId, Boolean available) {
-        List<MenuItem> items;
-
-        if (categoryId != null && available != null) {
-            items = menuItemRepository.findByCategoryIdAndIsAvailable(categoryId, available);
-        } else if (categoryId != null) {
-            items = menuItemRepository.findByCategoryId(categoryId);
-        } else if (available != null) {
-            items = menuItemRepository.findByIsAvailable(available);
-        } else {
-            items = menuItemRepository.findAll();
-        }
-
-        return items.stream().map(menuItemMapper::toDto).toList();
+    public List<MenuItemDto> getMenuItems() {
+        return menuItemRepository.findAll().stream()
+                .map(menuItemMapper::toDto)
+                .collect(Collectors.toList());
     }
 
 }
